--- a/public_html/fetch/index.html
+++ b/public_html/fetch/index.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html>
+ <head>
+  <title>Callback</title><meta charset="utf-8">
+ </head>
+ <body>
+   <input id="in" type="text" />
+   <button id="bt" onclick="task();"> click </button>
+   <script>
+ 
+     async function task(){
+       const input = document.getElementById('in');
+       let IN=await fetch(input.value);
+       input.value='';
+       input.value=await IN.text();
+     }
+   </script>
+   
+ </body>
+</html>
