--- a/public_html/promise/index.html
+++ b/public_html/promise/index.html
@@ -1,1 +1,1 @@
-function task(x){return new Promise((acc,rej) => x<18 ? acc('yes') : rej('no'))}
+function task(x){return new Promise((ac,rej) => x<18 ? ac('yes') : rej('no'))}
