--- a/public_html/fetch/index.html
+++ b/public_html/fetch/index.html
@@ -4,12 +4,12 @@
   <title>Callback</title><meta charset="utf-8">
  </head>
  <body>
-   <input id="in" type="text" />
+   <input id="inp" type="text" />
    <button id="bt" onclick="task();"> click </button>
    <script>
  
      async function task(){
-       const input = document.getElementById('in');
+       const input = document.getElementById('inp');
        let IN=await fetch(input.value);
        input.value='';
        input.value=await IN.text();
